# BricQt

./: BluetoothPermission.mm  BricClient.cpp  BricClient.h  BricMeasurementModel.cpp  BricMeasurementModel.h  CMakeLists.txt  Info.plist.in  Main.qml  README.md  main.cpp
